// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepositLoanStartMessage should match snapshot for corporate and deposit 1`] = `
.c0 {
  margin: 200px auto 0 auto;
  width: 480px;
}

.c1 {
  margin-bottom: 30px;
}

.c2 {
  text-align: center;
}

@media (min-width:68.75em) {
  .c0 {
    width: 580px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      data-test-id="intro-paragraph-1"
    >
      The 
      <b>
        Deposit feature
      </b>
       allows to ask appetite for deposits and view the non-binding information shared with you on a bilateral basis by financial institutions on a given currency and tenor. To start using it, click on "Request deposit information" then select the financial institutions you want to send your request to.
    </p>
  </div>
  <div
    className="c2"
  >
    <a
      className="ui primary button"
      data-test-id="request-currency-and-tenor-intro-btn"
      href="/deposits/request-information/new"
      onClick={[Function]}
    >
      Request deposit information
    </a>
  </div>
</div>
`;

exports[`DepositLoanStartMessage should match snapshot for corporate and deposit 2`] = `
.c0 {
  margin: 200px auto 0 auto;
  width: 480px;
}

.c1 {
  margin-bottom: 30px;
}

.c2 {
  text-align: center;
}

@media (min-width:68.75em) {
  .c0 {
    width: 580px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      data-test-id="intro-paragraph-1"
    >
      The 
      <b>
        Loan feature
      </b>
       allows to ask appetite for loans and view the non-binding information shared with you on a bilateral basis by financial institutions on a given currency and tenor. To start using it, click on "Request loan information" then select the financial institutions you want to send your request to.
    </p>
  </div>
  <div
    className="c2"
  >
    <a
      className="ui primary button"
      data-test-id="request-currency-and-tenor-intro-btn"
      href="/loans/request-information/new"
      onClick={[Function]}
    >
      Request loan information
    </a>
  </div>
</div>
`;

exports[`DepositLoanStartMessage should match snapshot for financial institutions and deposit 1`] = `
.c0 {
  margin: 200px auto 0 auto;
  width: 480px;
}

.c1 {
  margin-bottom: 30px;
}

.c2 {
  text-align: center;
}

.c3.c3.c3.c3.c3 {
  padding-left: 80px;
  padding-right: 80px;
}

@media (min-width:68.75em) {
  .c0 {
    width: 580px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      data-test-id="intro-paragraph-1"
    >
      The 
      <b>
        Deposit feature
      </b>
       allows you to set, update and promote your appetite for deposits. To start using it, click on "Add currency and tenor" in order to set your appetite and pricing for a given currency and tenor. You will then be able to select the counterparties with whom you wish to share non-binding information on a bilateral basis.
    </p>
  </div>
  <div
    className="c2"
  >
    <a
      className="ui primary button c3"
      data-test-id="add-currency-and-tenor-intro-btn"
      href="/deposits/new"
      onClick={[Function]}
    >
      Add currency and tenor
    </a>
  </div>
</div>
`;

exports[`DepositLoanStartMessage should match snapshot for financial institutions and loan 1`] = `
.c0 {
  margin: 200px auto 0 auto;
  width: 480px;
}

.c1 {
  margin-bottom: 30px;
}

.c2 {
  text-align: center;
}

.c3.c3.c3.c3.c3 {
  padding-left: 80px;
  padding-right: 80px;
}

@media (min-width:68.75em) {
  .c0 {
    width: 580px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      data-test-id="intro-paragraph-1"
    >
      The 
      <b>
        Loan feature
      </b>
       allows you to set, update and promote your appetite for loans. To start using it, click on "Add currency and tenor" in order to set your appetite and pricing for a given currency and tenor. You will then be able to select the counterparties with whom you wish to share non-binding information on a bilateral basis.
    </p>
  </div>
  <div
    className="c2"
  >
    <a
      className="ui primary button c3"
      data-test-id="add-currency-and-tenor-intro-btn"
      href="/loans/new"
      onClick={[Function]}
    >
      Add currency and tenor
    </a>
  </div>
</div>
`;
